--- a/WebContent/css/playerstyle.css
+++ b/WebContent/css/playerstyle.css
@@ -351,3 +351,9 @@ body {
     color: #000;
     cursor: pointer;
 }
+#background-box{
+	width:100%;
+	height:800px;
+	background:rgba(255, 175, 255, 0.7);
+	z-index:1000;
+}
