--- a/WebContent/css/playerstyle.css
+++ b/WebContent/css/playerstyle.css
@@ -20,6 +20,7 @@ body {
     top: 10px;
     width: 33px;
     height: 32px;
+    z-index: 95;
     background: url('../icon/icon2.png');
 }
 #gs:hover{
@@ -355,5 +356,20 @@ body {
 	width:100%;
 	height:800px;
 	background:rgba(0, 0, 0, 0.7);
-	z-index:1000;
+	z-index:94;
+}
+#a1{
+	position:absolute;
+	margin: 100px auto;
+	box-shadow: 0px 0px 15px #333333;
+	z-index: 96;
+	float: left;
+}
+#willesPlay {
+	z-index:96;
+    box-shadow: 0px 0px 15px #333333;
+    position: relative;
+    margin:auto auto 100px;
+    width:720px;
+    height:457px;
 }
