--- a/WebContent/css/playerstyle.css
+++ b/WebContent/css/playerstyle.css
@@ -1,11 +1,11 @@
 @CHARSET "UTF-8";
 @font-face {
-  font-family: 'iconfont';
-  src: url('http://at.alicdn.com/t/font_1473562312_2661614.eot'); /* IE9*/
-  src: url('http://at.alicdn.com/t/font_1473562312_2661614.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('http://at.alicdn.com/t/font_1473562312_2661614.woff') format('woff'), /* chrome、firefox */
-  url('http://at.alicdn.com/t/font_1473562312_2661614.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('http://at.alicdn.com/t/font_1473562312_2661614.svg#iconfont') format('svg'); /* iOS 4.1- */
+  font-family: 'iconfont';  /* project id 140464 */
+  src: url('//at.alicdn.com/t/font_suucmk8y34eipb9.eot');
+  src: url('//at.alicdn.com/t/font_suucmk8y34eipb9.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_suucmk8y34eipb9.woff') format('woff'),
+  url('//at.alicdn.com/t/font_suucmk8y34eipb9.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_suucmk8y34eipb9.svg#iconfont') format('svg');
 }
 html, body, div, p, ol, ul, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, form, input, select, button, textarea, iframe, table, th, td, ol, ul, li {
  margin: 0;
@@ -53,8 +53,6 @@ a{
 	width:20%;
 	height:100%;
 	float:right;
-	overflow-x: auto;
-	overflow-y: auto;
 }
 /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/  
 ::-webkit-scrollbar  
@@ -133,11 +131,11 @@ em, i {
 }
 .icon-view {
 	font-family: iconfont;
-	font-size: 25px;
+	font-size: 50px;
 	font-style: normal;
 	color:#FF6699;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     margin: -18px 0 0 -25px;
     background-position: 0 0;
@@ -544,25 +542,29 @@ em, i {
 }
 #background-box{
 	width:100%;
-	height:800px;
 	background:rgba(0, 0, 0, 0.7);
-	z-index:94;
+	z-index:96;
 }
 #a1{
 	position:absolute;
-	box-shadow: 1px 1px 15px 10px #333333;
 	z-index: 96;
-	width:80%;
+	width:100%;
 	height:100%;
+}
+#movie-box{
+	position:absolute;
+	z-index: 96;
+	height:100%;
+	width: 80%;
 	float:left;
 }
 #willesPlay {
-	z-index:94;
+	z-index:96;
     box-shadow: 0px 0px 15px #333333;
     position: relative;
-    margin:auto auto 100px;
+    margin:auto;
     width:80%;
-    height:500px;
+    height:80%;
 }
 #alertBox {
     opacity: .95;
@@ -610,4 +612,58 @@ em, i {
     height: 50px;
     border-bottom: #666 solid 1px;
     cursor: move;
+}
+
+#movieName {
+    font-size: 1.4em;
+    text-shadow: none;
+    text-align:center;
+    background-color: rgba(0,0,0,.1);
+    padding: 10px;
+    color: #fff;
+    border-radius: 25px;
+	-webkit-border-radius: 25px;
+	-moz-border-radius: 25px;
+}
+#movie-List{
+	position: static;
+	z-index: 96;
+	width:100%;
+	height:100%;
+	float:right;
+	overflow-x: auto; 
+    overflow-y: auto; 
+}
+#list-text{
+	float:right;
+	font-size: 1.4em;
+	padding: 10px;
+	width:100%;
+	text-align:center;
+	background-color: rgba(0,0,0,.1);
+	color: #fff;
+}
+#wzms,#twms {
+	font-family: iconfont;
+	font-size: 25px;
+	font-style: normal;
+	color:#FF6699;
+	cursor: pointer;
+}
+#wzms{
+	float:left;
+}
+#twms{
+	float:right;
+}
+#view-text{
+	text-align:center;
+	height:20px;
+	box-shadow: 0px 0px 15px #333333;
+}
+#view-a{
+	text-align:center;
+	font-size: 20px;
+	font-style: normal;
+	color:#111;
 }
