--- a/WebContent/css/playerstyle.css
+++ b/WebContent/css/playerstyle.css
@@ -650,6 +650,9 @@ em, i {
 	color:#FF6699;
 	cursor: pointer;
 }
+#wzms:hover,#twms:hover{
+	color:#1296DB
+}
 #wzms{
 	float:left;
 }
@@ -667,4 +670,17 @@ em, i {
 	font-style: normal;
 	color:#111;
 	position: initial;
+}
+#text-list{
+	display:none;
+}
+#texts-box{
+	width:100%;
+	height:25px;
+	font-size: 18px;
+	color:#FF6699;
+	text-align: center;
+}
+#texts-box:hover{
+	color:#1296DB
 }
